# wla

./: .gitignore  README  default.nix  shell.nix
gui/: default.nix
gui/src/: Dom.js  Dom.purs  Main.purs  index.html
gui/src/Control/: Applicative.purs  Apply.purs  Bind.purs  Effect.js  Effect.purs  Monad.purs  Semigroup.js  Semigroup.purs  Semigroupoid.purs
gui/src/Control/Monad/: Error.purs
gui/src/Data/: Bifunctor.purs  Either.purs  Foldable.js  Foldable.purs  Functor.purs  Json.js  Json.purs  Maybe.purs  Optic.purs  Profunctor.purs  Unit.js  Unit.purs  Void.js  Void.purs
gui/src/Data/Number/: Finite.purs
gui/src/Gui/: Config.purs  I18n.purs  WishList.purs
gui/src/Gui/WishList/: Dom.purs
gui/src/Network/: Ajax.purs
nix/: nixpkgs.nix
rfcs/: configuration  crawling-dsl  image-scraping  web-request-checks
wla/: default.nix  wla.cabal
wla/main/: wla.hs
wla/src/Control/: Logger.hs
wla/src/Control/Lens/: Extra.hs
wla/src/Data/: Secret.hs
wla/src/Network/HTTP/Client/: Extra.hs
wla/src/Network/Wai/: Cont.hs
wla/src/System/Posix/Signals/: Extra.hs
wla/src/Wla/: Config.hs  Crawl.hs  I18n.hs  Web.hs  WishList.hs
wla/src/Wla/Crawl/: Dyke.hs  Http.hs  Log.hs  UpstreamDyke.hs
wla/src/Wla/Infra/: Signals.hs
wla/src/Wla/Process/: Crawl.hs  Web.hs
wla/src/Wla/Software/: Zalando.hs
wla/src/Wla/WishList/: Html.hs
