cabal-version: >= 1.10
build-type: Simple

name: wla
version: 0.0.0.0

library
    hs-source-dirs:
        src

    exposed-modules:
        Control.Logger,
        Data.Secret,
        Wla.Crawl,
        Wla.Crawl.Http,
        Wla.Crawl.Log,
        Wla.Crawl.UpstreamDyke,
        Wla.I18n,
        Wla.Software.Zalando,
        Wla.WishList,
        Wla.WishList.Html

    default-language:
        Haskell2010

    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns

    default-extensions:
        ApplicativeDo,
        DeriveAnyClass,
        DeriveFunctor,
        DerivingStrategies,
        FlexibleContexts,
        OverloadedStrings,
        RecordWildCards,
        StrictData

    build-depends:
        aeson,
        base,
        blaze-html,
        bytestring,
        contravariant,
        free,
        http-client,
        lens,
        lens-aeson,
        mtl,
        semigroupoids,
        text,
        transformers,
        unordered-containers

executable wla
    hs-source-dirs:
        main

    main-is:
        wla.hs

    default-language:
        Haskell2010

    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns

    default-extensions:
        ApplicativeDo,
        OverloadedStrings,
        StrictData

    build-depends:
        base,
        blaze-html,
        bytestring,
        free,
        http-client-tls,
        wla
