cabal-version: >= 1.10
build-type: Simple

name: wla
version: 0.0.0.0

library
    hs-source-dirs:
        src

    exposed-modules:
        Control.Logger,
        Data.Secret,
        Network.Wai.Cont,
        Wla.Config,
        Wla.Crawl,
        Wla.Crawl.Http,
        Wla.Crawl.Log,
        Wla.Crawl.UpstreamDyke,
        Wla.I18n,
        Wla.Software.Zalando,
        Wla.Web,
        Wla.WishList,
        Wla.WishList.Html

    default-language:
        Haskell2010

    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns

    default-extensions:
        ApplicativeDo,
        DeriveAnyClass,
        DeriveFunctor,
        DerivingStrategies,
        FlexibleContexts,
        OverloadedStrings,
        RecordWildCards,
        StrictData

    build-depends:
        aeson,
        base,
        blaze-html,
        bytestring,
        contravariant,
        free,
        http-client,
        http-types,
        lens,
        lens-aeson,
        mtl,
        scientific,
        semigroupoids,
        text,
        transformers,
        unordered-containers,
        wai

executable wla
    hs-source-dirs:
        main

    main-is:
        wla.hs

    default-language:
        Haskell2010

    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns

    default-extensions:
        ApplicativeDo,
        OverloadedStrings,
        StrictData

    build-depends:
        async,
        base,
        free,
        http-client,
        http-client-tls,
        warp,
        wla
