cabal-version: >= 1.10
build-type: Simple

name: wla
version: 0.0.0.0

library
    hs-source-dirs:
        src

    exposed-modules:
        Control.Lens.Extra,
        Control.Logger,
        Data.Secret,
        Network.HTTP.Client.Extra,
        Network.Wai.Cont,
        System.Posix.Signals.Extra,
        Wla.Config,
        Wla.Crawl,
        Wla.Crawl.Http,
        Wla.Crawl.Log,
        Wla.Crawl.UpstreamDyke,
        Wla.I18n,
        Wla.Process.Crawl,
        Wla.Process.Web,
        Wla.Software.Zalando,
        Wla.Web,
        Wla.WishList,
        Wla.WishList.Html

    default-language:
        Haskell2010

    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns

    default-extensions:
        ApplicativeDo,
        DeriveAnyClass,
        DeriveFunctor,
        DerivingStrategies,
        FlexibleContexts,
        OverloadedStrings,
        RankNTypes,
        RecordWildCards,
        StrictData

    build-depends:
        aeson,
        base,
        blaze-html,
        bytestring,
        contravariant,
        exceptions,
        free,
        http-client,
        http-types,
        lens,
        lens-aeson,
        mmorph,
        mtl,
        pipes,
        profunctors,
        scientific,
        semigroupoids,
        text,
        transformers,
        unix,
        unordered-containers,
        wai,
        warp

executable wla
    hs-source-dirs:
        main

    main-is:
        wla.hs

    default-language:
        Haskell2010

    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns

    default-extensions:
        ApplicativeDo,
        OverloadedStrings,
        StrictData

    build-depends:
        async,
        base,
        http-client-tls,
        pipes,
        wla
